--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_activity"
     android:layout_width="match_parent"
-    android:background="@drawable/bg_redd"
+    android:background="@drawable/app_background2"
     android:layout_height="match_parent">
 
     <ImageView
