--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,6 +3,7 @@
     android:id="@+id/main_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_background2"
     android:visibility="visible"
     android:orientation="vertical"
     android:gravity="center_horizontal">
