--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -19,7 +19,6 @@
 
             android:orientation="vertical">
 
-
             <TextView
                 android:id="@+id/editProfileNameLabel"
                 android:layout_width="wrap_content"
@@ -38,6 +37,7 @@
                 android:hint="Enter your name"
                 android:inputType="textPersonName"
                 android:textColorHint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:backgroundTint="#C0C0C0"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="16dp" />
@@ -60,6 +60,7 @@
                 android:maxLines="3"
                 android:hint="Write about yourself here..."
                 android:textColorHint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:backgroundTint="#C0C0C0"
                 android:inputType="textMultiLine" />
 
@@ -81,6 +82,7 @@
                 android:inputType="textPersonName"
                 android:hint="Enter an artist"
                 android:textColorHint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:backgroundTint="#C0C0C0"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="16dp" />
@@ -90,6 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:backgroundTint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -102,6 +105,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:textColorHint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -114,6 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:textColorHint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -126,6 +131,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:textColorHint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -149,6 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:textColorHint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -161,6 +168,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:textColorHint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -173,12 +181,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#C0C0C0"
+                android:textColor="#C0C0C0"
                 android:textColorHint="#C0C0C0"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:hint="Enter a genre"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="16dp" />
+
+            <Button
+                android:id="@+id/editProfilePhotoButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Change Profile Photo" />
+
+            <ImageView
+                android:id="@+id/editProfilePhoto"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:srcCompat="@drawable/default_profile_pic_png_9" />
 
 
         </LinearLayout>
