--- a/app/src/main/res/menu/drop_menu.xml
+++ b/app/src/main/res/menu/drop_menu.xml
@@ -17,4 +17,7 @@
     <item android:id="@+id/profile"
         android:title="@string/profile"
         app:showAsAction="never"/>
+    <item android:id="@+id/song_list"
+        android:title="Songs"
+        app:showAsAction="never"/>
 </menu>
