Renamed textView IDs in activity_profile.xml for better readability.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/viewProfilePicture"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_alignParentLeft="true"
@@ -19,7 +19,7 @@
         android:src ="@drawable/default_profile_pic_png_9" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/viewFullName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -32,12 +32,12 @@
         android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/viewAboutHeadline"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView"
+        android:layout_alignLeft="@+id/viewFullName"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/imageView"
+        android:layout_alignStart="@+id/viewFullName"
         android:layout_marginTop="213dp"
         android:maxLines="5"
         android:text="About Firstname:"
@@ -63,12 +63,12 @@
     </HorizontalScrollView>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/viewFavoriteArtistHeadline"
         android:layout_width="172dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/imageView"
+        android:layout_below="@+id/viewFullName"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:maxLines="6"
@@ -77,56 +77,56 @@
         android:textSize="20dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/viewAboutContent"
         android:layout_width="172dp"
         android:layout_height="105dp"
-        android:layout_alignStart="@+id/imageView"
+        android:layout_alignStart="@+id/viewFullName"
 
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/viewAboutHeadline"
         android:maxLines="6"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ligula tellus, imperdiet ac, egestas "
         android:textColor="#C0C0C0" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/viewFavoriteArtistsContent"
         android:layout_width="171dp"
         android:layout_height="133dp"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_below="@+id/textView3"
+        android:layout_alignLeft="@+id/viewFavoriteArtistHeadline"
+        android:layout_alignStart="@+id/viewFavoriteArtistHeadline"
+        android:layout_below="@+id/viewFavoriteArtistHeadline"
         android:text="Artist 1\nArtist 2\nArtist 3\nArtist 4\nArtist 5\n"
         android:textColor="#C0C0C0"
         android:textSize="15dp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/viewFavoriteGenresHeadline"
         android:layout_width="171dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
+        android:layout_alignBottom="@+id/viewAboutHeadline"
+        android:layout_alignLeft="@+id/viewFavoriteArtistHeadline"
+        android:layout_alignStart="@+id/viewFavoriteArtistHeadline"
         android:text="Favorite Genres"
         android:textColor="#C0C0C0"
         android:textSize="20dp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/viewFavoriteGenreContent"
         android:layout_width="169dp"
         android:layout_height="105dp"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_alignTop="@+id/textView4"
+        android:layout_alignLeft="@+id/viewFavoriteArtistHeadline"
+        android:layout_alignStart="@+id/viewFavoriteArtistHeadline"
+        android:layout_alignTop="@+id/viewAboutContent"
         android:text="Genre 1\nGenre 2\nGenre 3\n"
         android:textColor="#C0C0C0"
         android:textSize="15dp" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/viewRecentSongsHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView"
+        android:layout_alignLeft="@+id/viewFullName"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView"
+        android:layout_alignStart="@+id/viewFullName"
         android:layout_marginBottom="110dp"
         android:text="Recently Listened Songs:"
         android:textColor="#C0C0C0"
@@ -136,7 +136,7 @@
         android:id="@+id/profileEditButton"
         android:layout_width="100dp"
         android:layout_height="35dp"
-        android:layout_alignRight="@+id/textView3"
+        android:layout_alignRight="@+id/viewFavoriteArtistHeadline"
         android:layout_alignParentTop="true"
         android:text="Edit Profile"
         android:textSize="10dp"/>
