--- a/app/src/main/res/layout/music_player_activity.xml
+++ b/app/src/main/res/layout/music_player_activity.xml
@@ -49,6 +49,24 @@
         android:layout_marginTop="30dp"
         android:onClick="playButtonClick"/>
 
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="-90dp"
+        android:layout_marginTop="-60dp"
+        android:background="@drawable/next"
+        android:onClick="playButtonClick" />
+
+    <Button
+        android:id="@+id/prev_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/prev"
+        android:layout_marginTop="-60dp"
+        android:layout_marginLeft="-90dp"
+        android:onClick="playButtonClick"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
