--- a/app/src/main/res/menu/drop_menu.xml
+++ b/app/src/main/res/menu/drop_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/drop_menu"
-        android:icon="@drawable/ic_drop_menu"
+        android:icon="@drawable/airlogo"
         android:title="@string/profile"
         app:showAsAction="ifRoom"/>
 
