--- a/app/src/main/res/layout/music_player_activity.xml
+++ b/app/src/main/res/layout/music_player_activity.xml
@@ -56,7 +56,7 @@
         android:layout_marginRight="-90dp"
         android:layout_marginTop="-60dp"
         android:background="@drawable/next"
-        android:onClick="playButtonClick" />
+        android:onClick="nextButtonClick" />
 
     <Button
         android:id="@+id/prev_button"
@@ -65,7 +65,7 @@
         android:background="@drawable/prev"
         android:layout_marginTop="-60dp"
         android:layout_marginLeft="-90dp"
-        android:onClick="playButtonClick"/>
+        android:onClick="prevButtonClick"/>
 
     <LinearLayout
         android:layout_width="match_parent"
