Widened Create Account fields

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -51,8 +51,8 @@
 
     <EditText
         android:id="@+id/username"
-        android:layout_width="418dp"
-        android:layout_height="29dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
         android:inputType="text|textPersonName"
@@ -76,11 +76,11 @@
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
+        android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxvcbnm"
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="text|textPassword"
-        android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxvcbnm"
         android:singleLine="true"
         android:visibility="visible" />
 
@@ -110,11 +110,11 @@
     <EditText
         android:id="@+id/confirmpassword"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
+        android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxvcbnm"
         android:ems="10"
         android:importantForAutofill="no"
         android:inputType="text|textPassword"
-        android:digits="0,1,2,3,4,5,6,7,8,9,qwertyuiopasdfghjklzxvcbnm"
         android:visibility="visible" />
 
     <Space
