--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,7 +40,7 @@
         android:layout_alignStart="@+id/viewFullName"
         android:layout_marginTop="213dp"
         android:maxLines="5"
-        android:text="About Firstname:"
+        android:text="About Me:"
         android:textColor="#C0C0C0"
         android:textSize="20sp" />
 
