--- a/app/src/main/res/menu/drop_menu.xml
+++ b/app/src/main/res/menu/drop_menu.xml
@@ -20,4 +20,7 @@
     <item android:id="@+id/song_list"
         android:title="Songs"
         app:showAsAction="never"/>
+    <item android:id="@+id/logOut"
+        android:title="Log Out"
+        app:showAsAction="never"/>
 </menu>
