--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -63,20 +63,10 @@
         android:id="@+id/usernametxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/username"
+        android:text="Full Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/background_light"
         android:textSize="16sp"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/usernameReq"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="*between 8-12 characters"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@android:color/background_light"
-        android:textSize="12sp"
         android:visibility="visible" />
 
     <EditText
