--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:orientation="vertical">
 
 
@@ -77,7 +76,7 @@
         <TextView
             android:id="@+id/viewAboutContent"
             android:layout_width="match_parent"
-            android:layout_height="105dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:maxLines="6"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ligula tellus, imperdiet ac, egestas "
@@ -141,7 +140,7 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="center_horizontal"
         android:text="Edit Profile"
-        android:textSize="10dp"/>
+        android:textSize="15dp"/>
 
 
 </RelativeLayout>
