--- a/app/src/main/res/layout/activity_list_of_songs.xml
+++ b/app/src/main/res/layout/activity_list_of_songs.xml
@@ -8,8 +8,22 @@
 
     <ListView
         android:id="@+id/song_list"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/app_background2"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/shareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/song_list"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="15dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="visible"
+        app:srcCompat="?android:attr/actionModeShareDrawable" />
 </RelativeLayout>
