--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -12,11 +12,11 @@
         android:layout_weight="50"
         android:weightSum="100">
 
-        <ImageView
+        <!--<ImageView
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_weight="50"
-            android:id="@+id/image"/>
+            android:id="@+id/image"/>-->
 
         <TextView
             android:id="@+id/textView1"
@@ -31,7 +31,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -55,6 +55,6 @@
             android:text="@string/textview3"
 
             android:textColor="#C0C0C0" />
-    </LinearLayout>
+    </LinearLayout>-->
 
 </LinearLayout>
